data/Java/11-access-non-static-variable/2/[M]Error.txt
https://stackoverflow.com/questions/4226734/non-static-variable-name-cannot-be-referenced-from-a-static-context
Program.java:14: error: non-static variable album cannot be referenced from a static context
        System.out.println("Album Information stored for "+album);
                                                           ^